<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.ui.activity.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_80"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/redSeaOilToolBarTV"
            android:layout_width="@dimen/qb_px_70"
            android:layout_height="wrap_content"
            android:text="@string/red_sea_toolbar"
            android:textSize="@dimen/qb_px_16"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:lineHeight="@dimen/qb_px_20"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:textFontWeight="700"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/pageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_toolbar"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="@dimen/qb_px_25"
            android:textColor="@color/white"
            android:textFontWeight="700"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchInputText"
        android:layout_width="@dimen/qb_px_300"
        android:layout_height="@dimen/qb_px_60"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/qb_px_20"
        android:background="@drawable/btn_round_black"
        app:queryHint="@string/search_well"
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/ic_search"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchBtn"
        android:layout_width="@dimen/qb_px_300"
        android:layout_height="@dimen/qb_px_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/qb_px_100"
        android:background="@drawable/btn_round_red"
        android:text="@string/search_btn"
        android:foregroundGravity="center"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/qb_px_18"
        android:gravity="center"
        android:drawablePadding="@dimen/qb_px_10"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backSearchBtn"
        android:layout_width="@dimen/qb_px_300"
        android:layout_height="@dimen/qb_px_60"
        app:layout_constraintTop_toBottomOf="@id/searchBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/qb_px_20"
        android:backgroundTintMode="src_atop"
        android:background="@drawable/btn_white_grey"
        android:textStyle="bold"
        android:hint="@string/search_well"
        android:text="@string/back_btn"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:textSize="@dimen/qb_px_18"
        android:drawablePadding="@dimen/qb_px_10"
        android:textColor="@color/black"
        />







</androidx.constraintlayout.widget.ConstraintLayout>